--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "sync": "scp -r $(ls -A | grep -v 'node_modules\\|.git') darko@37.97.245.230:/var/www/tictactoe/"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -13,7 +12,7 @@
   },
   "author": {
     "name": "Darko Kuzmanovic",
-    "url": "https://github.com/darkokuzmanovic"
+    "url": "https://quz.ma"
   },
   "license": "MIT",
   "keywords": [
@@ -27,10 +26,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/darkokuzmanovic/deskduels"
+    "url": "https://github.com/darkokuzmanovic/DeskDuels"
   },
   "bugs": {
-    "url": "https://github.com/darkokuzmanovic/deskduels/issues"
+    "url": "https://github.com/darkokuzmanovic/DeskDuels/issues"
   },
   "engines": {
     "node": ">=14.0.0"
